# pyccpm

./: README.md  ai_ccpm_vba_to_py.md  ai_ccpm_vba_to_py.py  project_schedule.csv  pyproject.toml  requirements.txt  test_collect_task_data.py
src/pyccpm/: __init__.py  models.py  scheduler.py  utils.py  visualization.py
tests/: ccpm_schedule.csv  conftest.py  manual_tests.py  test_df_task_data.csv  test_pyccpm.py  test_scheduler.py
tests/reference/: test_collect_task_data.csv  test_leach_simple.csv  test_parallel_paths.csv  test_resource_conflicts.csv  test_simple_sequential.csv
