[project]
name = "pyccpm"
version = "0.1.0"
description = "Critical Chain Project Management Library"
readme = "README.md"
authors = [
    { name = "Rudiger Wolf", email = "Rudiger.Wolf@ThroughputFocus.com" }
]
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.4.2",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pip>=25.0.1",
    "pytest>=8.3.5",
]

[tool.setuptools.packages.find]
where = ["src"]  # the package is in src/pyccpm/

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
# Exclude manual tests from automated testing
addopts = "--ignore=tests/manual_tests.py"
